--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=EmployeePayRoll
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/riyaDB
+spring.datasource.username=root
+spring.datasource.password=RiGo@1215
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
