--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Set logging level
+logging.level.root=INFO
+logging.level.com.rashi.EmployeePayroll.employee=DEBUG
+
+# Log output format
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Log file location
+logging.file.name=logs/employee-payroll.log
