--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,18 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %m
 # Log file location
 logging.file.name=logs/employee-payroll.log
 
-spring.profiles.active=dev
+
+
+#UC-9
+#mysql> CREATE DATABASE employee_payroll;
+#Query OK, 1 row affected (0.01 sec)
+#
+#mysql> CREATE USER 'payroll_user'@'localhost' IDENTIFIED BY 'your_secure_password';
+#Query OK, 0 rows affected (0.07 sec)
+#
+#mysql> GRANT ALL PRIVILEGES ON employee_payroll.* TO 'payroll_user'@'localhost';
+#Query OK, 0 rows affected (0.02 sec)
+#
+#mysql> FLUSH PRIVILEGES;
+#Query OK, 0 rows affected (0.02 sec)
+
