--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %m
 # Log file location
 logging.file.name=logs/employee-payroll.log
 
+spring.profiles.active=dev
 
 
 #UC-9
@@ -35,5 +36,5 @@ logging.file.name=logs/employee-payroll.log
 #Query OK, 0 rows affected (0.02 sec)
 #
 #mysql> FLUSH PRIVILEGES;
-#Query OK, 0 rows affected (0.02 sec)
 
+#Query OK, 0 rows affected (0.02 sec)
